tests/cases/smoke/invalid/expr_chained_compare.dp
var x = 5
var ok = 1 < x < 10
